[gd_scene load_steps=61 format=3 uid="uid://im3kwh1g6ckg"]

[ext_resource type="Texture2D" uid="uid://bfabcgepgxtdx" path="res://balanca_jogo/background/barraca.png" id="1_ersve"]
[ext_resource type="Script" path="res://balanca_jogo/node_2d.gd" id="1_s5x1h"]
[ext_resource type="Texture2D" uid="uid://tba38p5c0iqs" path="res://balanca_jogo/balanca_imagens/L1_5graus_transparente.png" id="2_6nlrj"]
[ext_resource type="Texture2D" uid="uid://d0e4yphbe5x7y" path="res://balanca_jogo/balanca_imagens/L2_5graus_transparente.png" id="3_k8t3n"]
[ext_resource type="Texture2D" uid="uid://k147hy4pal0l" path="res://balanca_jogo/balanca_imagens/L1_8graus_transparente.png" id="4_w4aal"]
[ext_resource type="Texture2D" uid="uid://beqwqivnfof58" path="res://balanca_jogo/balanca_imagens/L2_8graus_transparente.png" id="5_t0ixv"]
[ext_resource type="Texture2D" uid="uid://d0ilh24lb5meb" path="res://balanca_jogo/balanca_imagens/L1_12graus_transparente.png" id="6_c20u4"]
[ext_resource type="Texture2D" uid="uid://bok186tlr3lib" path="res://balanca_jogo/balanca_imagens/L2_12graus_transparente.png" id="7_pcs0i"]
[ext_resource type="Texture2D" uid="uid://cr3kyobldrgfw" path="res://balanca_jogo/balanca_imagens/L1_15graus_transparente_instavel.png" id="8_i7xl2"]
[ext_resource type="Texture2D" uid="uid://bjv561cw7tmy3" path="res://balanca_jogo/balanca_imagens/L2_15graus_transparente_instavel.png" id="9_8w1aw"]
[ext_resource type="Texture2D" uid="uid://cuh6nce4ae6u8" path="res://balanca_jogo/balanca_imagens/transparente_equilibrio.png" id="10_tft6j"]
[ext_resource type="Texture2D" uid="uid://b02xmhso7rwml" path="res://balanca_jogo/balanca_imagens/L1_15graus_transparente_equilibrio.png" id="11_4bueq"]
[ext_resource type="Texture2D" uid="uid://833pie6a5yy1" path="res://balanca_jogo/balanca_imagens/L2_15graus_transparente_equilibrio.png" id="12_acwto"]
[ext_resource type="Script" path="res://balanca_jogo/balanca.gd" id="13_ijvl8"]
[ext_resource type="Texture2D" uid="uid://cp1c7ld805an7" path="res://balanca_jogo/itens/moeda/moeda_transparente.png" id="14_royq0"]
[ext_resource type="Texture2D" uid="uid://jiiuh7n2u7dw" path="res://balanca_jogo/itens/moeda/10_moeda.png" id="15_5agkb"]
[ext_resource type="Texture2D" uid="uid://ba3ljo420a236" path="res://balanca_jogo/itens/moeda/11_moeda.png" id="16_68j7n"]
[ext_resource type="Texture2D" uid="uid://bs8pvglqxpg4p" path="res://balanca_jogo/itens/moeda/12_moeda.png" id="17_6qphs"]
[ext_resource type="Texture2D" uid="uid://dlkqp60qstcgc" path="res://balanca_jogo/itens/moeda/13_moeda.png" id="18_wmsi1"]
[ext_resource type="Texture2D" uid="uid://dqxgqo4xjo117" path="res://balanca_jogo/itens/moeda/14_moeda.png" id="19_esfik"]
[ext_resource type="Texture2D" uid="uid://dlengrt4pl4ea" path="res://balanca_jogo/itens/moeda/15_moeda.png" id="20_p4tk6"]
[ext_resource type="Texture2D" uid="uid://b8ocibrcy5bmv" path="res://balanca_jogo/itens/moeda/16_moeda.png" id="21_4akcj"]
[ext_resource type="Texture2D" uid="uid://gmdrc6bw0ar6" path="res://balanca_jogo/itens/moeda/17_moeda.png" id="22_0xral"]
[ext_resource type="Texture2D" uid="uid://b5fjru3mfi1rp" path="res://balanca_jogo/itens/moeda/18_moeda.png" id="23_uryth"]
[ext_resource type="Texture2D" uid="uid://be3hloy0awf6y" path="res://balanca_jogo/itens/moeda/19_moeda.png" id="24_v0e60"]
[ext_resource type="Texture2D" uid="uid://glka35udkjuq" path="res://balanca_jogo/itens/moeda/2_moeda.png" id="25_mye3v"]
[ext_resource type="Texture2D" uid="uid://74fjx8eqh32v" path="res://balanca_jogo/itens/moeda/20_moeda.png" id="26_8g743"]
[ext_resource type="Texture2D" uid="uid://88130xfkhu8m" path="res://balanca_jogo/itens/moeda/3_moeda.png" id="27_xht3k"]
[ext_resource type="Texture2D" uid="uid://dkxioowgtvjcp" path="res://balanca_jogo/itens/moeda/4_moeda.png" id="28_tnwgm"]
[ext_resource type="Texture2D" uid="uid://dwvsnnf38oowh" path="res://balanca_jogo/itens/moeda/5_moeda.png" id="29_mogwi"]
[ext_resource type="Texture2D" uid="uid://bbopddkfsex0n" path="res://balanca_jogo/itens/moeda/6_moeda.png" id="30_5d61x"]
[ext_resource type="Texture2D" uid="uid://ddpf4xbnlplb5" path="res://balanca_jogo/itens/moeda/7_moeda.png" id="31_lr7tn"]
[ext_resource type="Texture2D" uid="uid://cxyu71chf2w3" path="res://balanca_jogo/itens/moeda/8_moeda.png" id="32_bnnsx"]
[ext_resource type="Texture2D" uid="uid://vaf76xe2oesf" path="res://balanca_jogo/itens/moeda/9_moeda.png" id="33_ewbhy"]
[ext_resource type="Texture2D" uid="uid://d347shc3jwfro" path="res://balanca_jogo/itens/0_poeira_do_balcao.png" id="34_ctme8"]
[ext_resource type="Texture2D" uid="uid://du88n7i466c8h" path="res://balanca_jogo/itens/1_escama_de_peixe.png" id="35_xnawt"]
[ext_resource type="Texture2D" uid="uid://bf7rctqjumucl" path="res://balanca_jogo/itens/10_bolo_da_sabedoria.png" id="36_vx6i5"]
[ext_resource type="Texture2D" uid="uid://ddyue4i7jjudo" path="res://balanca_jogo/itens/2_bota_suja.png" id="37_7drw7"]
[ext_resource type="Texture2D" uid="uid://dkhxgusbfc75" path="res://balanca_jogo/itens/3_rosa_do_deserto.png" id="38_ltv67"]
[ext_resource type="Texture2D" uid="uid://nskbqjvql82i" path="res://balanca_jogo/itens/4_alho_espanta_vampiro.png" id="39_up3ss"]
[ext_resource type="Texture2D" uid="uid://b50ni7in53hga" path="res://balanca_jogo/itens/5_cogumelo_de_brigadeiro.png" id="40_qu3yc"]
[ext_resource type="Texture2D" uid="uid://d2ct6c18mpvrg" path="res://balanca_jogo/itens/6_peixe_voador.png" id="41_2m0oo"]
[ext_resource type="Texture2D" uid="uid://c60br1cp2p708" path="res://balanca_jogo/itens/7_pimenta_draconica.png" id="42_15dn7"]
[ext_resource type="Texture2D" uid="uid://qtbapisp2fug" path="res://balanca_jogo/itens/8_melaco_reparador.png" id="43_4n2mv"]
[ext_resource type="Texture2D" uid="uid://okbfac2jxwuc" path="res://balanca_jogo/itens/9_poeira_intergalatica.png" id="44_ussvr"]
[ext_resource type="FontFile" uid="uid://571l1nqrtkih" path="res://balanca_jogo/botao/CelticHand.ttf" id="45_mdibx"]
[ext_resource type="Texture2D" uid="uid://gvrop6jnjvop" path="res://balanca_jogo/botao/Button_Blue_3Slides.png" id="46_7k6ju"]
[ext_resource type="Texture2D" uid="uid://t8rto1hqqwe2" path="res://balanca_jogo/botao/Button_Blue_3Slides_Pressed.png" id="47_a2bqg"]
[ext_resource type="Texture2D" uid="uid://cyjd18wum1x0j" path="res://balanca_jogo/botao/Button_Disable_3Slides.png" id="48_hu6cb"]
[ext_resource type="AudioStream" uid="uid://b0gua01oe30dy" path="res://balanca_jogo/end screen/correct-6033.mp3" id="49_h4eq3"]
[ext_resource type="AudioStream" uid="uid://d2rfo61ikmqd7" path="res://balanca_jogo/end screen/wrong-answer-126515.mp3" id="50_plg0w"]
[ext_resource type="Texture2D" uid="uid://d6vhqhp47upl" path="res://balanca_jogo/end screen/Ribbon_Blue_3Slides.png" id="51_tvldb"]
[ext_resource type="Texture2D" uid="uid://bmt8hrlum0hd6" path="res://balanca_jogo/end screen/Ribbon_Red_3Slides.png" id="52_e4n1v"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_nyx4x"]

[sub_resource type="QuadMesh" id="QuadMesh_wyvrd"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ytqwy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_6nlrj")
}, {
"duration": 1.0,
"texture": ExtResource("3_k8t3n")
}, {
"duration": 1.0,
"texture": ExtResource("4_w4aal")
}, {
"duration": 1.0,
"texture": ExtResource("5_t0ixv")
}, {
"duration": 1.0,
"texture": ExtResource("6_c20u4")
}, {
"duration": 1.0,
"texture": ExtResource("7_pcs0i")
}, {
"duration": 1.0,
"texture": ExtResource("8_i7xl2")
}, {
"duration": 1.0,
"texture": ExtResource("9_8w1aw")
}],
"loop": true,
"name": &"balancando",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_tft6j")
}],
"loop": true,
"name": &"equilibrio",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_4bueq")
}],
"loop": true,
"name": &"pesado_direita",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_acwto")
}],
"loop": true,
"name": &"pesado_esquerda",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_o6f3x"]
animations = [{
"frames": [],
"loop": true,
"name": &"moeda_0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_royq0")
}],
"loop": true,
"name": &"moeda_1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_5agkb")
}],
"loop": true,
"name": &"moeda_10",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_68j7n")
}],
"loop": true,
"name": &"moeda_11",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_6qphs")
}],
"loop": true,
"name": &"moeda_12",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_wmsi1")
}],
"loop": true,
"name": &"moeda_13",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_esfik")
}],
"loop": true,
"name": &"moeda_14",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_p4tk6")
}],
"loop": true,
"name": &"moeda_15",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("21_4akcj")
}],
"loop": true,
"name": &"moeda_16",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_0xral")
}],
"loop": true,
"name": &"moeda_17",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("23_uryth")
}],
"loop": true,
"name": &"moeda_18",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("24_v0e60")
}],
"loop": true,
"name": &"moeda_19",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("25_mye3v")
}],
"loop": true,
"name": &"moeda_2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("26_8g743")
}],
"loop": true,
"name": &"moeda_20",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("27_xht3k")
}],
"loop": true,
"name": &"moeda_3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("28_tnwgm")
}],
"loop": true,
"name": &"moeda_4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("29_mogwi")
}],
"loop": true,
"name": &"moeda_5",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("30_5d61x")
}],
"loop": true,
"name": &"moeda_6",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("31_lr7tn")
}],
"loop": true,
"name": &"moeda_7",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("32_bnnsx")
}],
"loop": true,
"name": &"moeda_8",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("33_ewbhy")
}],
"loop": true,
"name": &"moeda_9",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ow4e4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("34_ctme8")
}],
"loop": true,
"name": &"0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("35_xnawt")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("36_vx6i5")
}],
"loop": true,
"name": &"10",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("37_7drw7")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("38_ltv67")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("39_up3ss")
}],
"loop": true,
"name": &"4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("40_qu3yc")
}],
"loop": true,
"name": &"5",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("41_2m0oo")
}],
"loop": true,
"name": &"6",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("42_15dn7")
}],
"loop": true,
"name": &"7",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("43_4n2mv")
}],
"loop": true,
"name": &"8",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("44_ussvr")
}],
"loop": true,
"name": &"9",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"nothing",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_a063f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("34_ctme8")
}],
"loop": true,
"name": &"0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("35_xnawt")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("36_vx6i5")
}],
"loop": true,
"name": &"10",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("37_7drw7")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("38_ltv67")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("39_up3ss")
}],
"loop": true,
"name": &"4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("40_qu3yc")
}],
"loop": true,
"name": &"5",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("41_2m0oo")
}],
"loop": true,
"name": &"6",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("42_15dn7")
}],
"loop": true,
"name": &"7",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("43_4n2mv")
}],
"loop": true,
"name": &"8",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("44_ussvr")
}],
"loop": true,
"name": &"9",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"nothing",
"speed": 5.0
}]

[sub_resource type="Theme" id="Theme_avhse"]
default_font_size = 60

[node name="Node2D" type="Node2D"]
script = ExtResource("1_s5x1h")

[node name="BackGround" type="Node2D" parent="."]

[node name="Origbig" type="Sprite2D" parent="BackGround"]
position = Vector2(576, 324)
scale = Vector2(1.2, 1.2)
texture = ExtResource("1_ersve")

[node name="MeshInstance2D" type="MeshInstance2D" parent="BackGround"]
modulate = Color(0, 0, 0, 0.313726)
material = SubResource("CanvasItemMaterial_nyx4x")
position = Vector2(666, 432)
scale = Vector2(1940, 1080)
mesh = SubResource("QuadMesh_wyvrd")

[node name="balanca" type="AnimatedSprite2D" parent="."]
position = Vector2(576, 287)
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_ytqwy")
animation = &"equilibrio"
frame_progress = 0.433288
script = ExtResource("13_ijvl8")

[node name="peso_direita" type="AnimatedSprite2D" parent="balanca"]
position = Vector2(342.5, -350)
scale = Vector2(0.233333, 0.233333)
sprite_frames = SubResource("SpriteFrames_o6f3x")
animation = &"moeda_0"

[node name="peso_esquerda_num_1" type="AnimatedSprite2D" parent="balanca"]
position = Vector2(-396.667, -350)
scale = Vector2(0.583333, 0.583333)
sprite_frames = SubResource("SpriteFrames_ow4e4")
animation = &"nothing"

[node name="peso_esquerda_num_2" type="AnimatedSprite2D" parent="balanca"]
position = Vector2(-280, -350)
scale = Vector2(0.583333, 0.583333)
sprite_frames = SubResource("SpriteFrames_a063f")
animation = &"nothing"

[node name="conta" type="Label" parent="balanca"]
offset_left = -407.555
offset_top = -268.333
offset_right = -291.555
offset_bottom = -185.333
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 4
theme_override_font_sizes/font_size = 60

[node name="Button" type="TextureButton" parent="balanca"]
offset_left = -131.667
offset_top = 435.0
offset_right = 60.3333
offset_bottom = 524.0
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("46_7k6ju")
texture_pressed = ExtResource("47_a2bqg")
texture_disabled = ExtResource("48_hu6cb")
texture_focused = ExtResource("47_a2bqg")
stretch_mode = 0

[node name="Label" type="Label" parent="balanca"]
offset_left = -120.0
offset_top = 441.667
offset_right = 150.0
offset_bottom = 534.667
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 60
text = "Pagar"
horizontal_alignment = 1

[node name="SpinBox" type="SpinBox" parent="balanca"]
offset_left = 231.666
offset_top = -268.333
offset_right = 475.666
offset_bottom = -177.333
focus_mode = 2
theme = SubResource("Theme_avhse")
max_value = 99.0
alignment = 1
update_on_text_changed = true
select_all_on_focus = true

[node name="correctSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("49_h4eq3")

[node name="wrongSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("50_plg0w")
volume_db = -10.0

[node name="RibbonBlue3Slides" type="Sprite2D" parent="."]
visible = false
position = Vector2(576, 324)
scale = Vector2(3, 3)
texture = ExtResource("51_tvldb")

[node name="Label" type="Label" parent="RibbonBlue3Slides"]
offset_left = -58.0
offset_top = -20.0
offset_right = 63.0
offset_bottom = 3.0
theme_override_fonts/font = ExtResource("45_mdibx")
theme_override_font_sizes/font_size = 20
text = "Correto!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RibbonRed3Slides" type="Sprite2D" parent="."]
visible = false
position = Vector2(576, 324)
scale = Vector2(3, 3)
texture = ExtResource("52_e4n1v")

[node name="Label" type="Label" parent="RibbonRed3Slides"]
offset_left = -59.3333
offset_top = -26.0
offset_right = 62.6667
offset_bottom = 5.0
theme_override_fonts/font = ExtResource("45_mdibx")
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="balanca/Button" to="balanca" method="_on_button_pressed"]
[connection signal="value_changed" from="balanca/SpinBox" to="balanca" method="_on_spin_box_value_changed"]
